--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krau",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Front-end scaffold.",
   "keywords": [
     "front-end",
@@ -54,6 +54,7 @@
     "html-webpack-plugin": "^3.2.0",
     "inquirer": "^5.2.0",
     "jsdoc-webpack-plugin": "0.0.2",
+    "lazy-cache": "^2.0.2",
     "left-pad": "^1.3.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
