--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-runtime": "^6.26.0",
     "colors": "^1.2.1",
     "commander": "^2.15.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "cssnano": "^3.8.0",
     "decompress-zip": "^0.3.1",
@@ -56,6 +57,7 @@
     "jsdoc-webpack-plugin": "0.0.2",
     "lazy-cache": "^2.0.2",
     "left-pad": "^1.3.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "npx-handlebars-inject-loader": "^1.0.0",
