--- a/example/normal(react)/package.json
+++ b/example/normal(react)/package.json
@@ -10,5 +10,11 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.22.0",
+    "react-hot-loader": "^4.1.2"
+  }
 }
