--- a/example/vue@2/package.json
+++ b/example/vue@2/package.json
@@ -10,6 +10,9 @@
     "vue": "^2.4.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.28.7",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
