--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krau",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Front-end scaffold.",
   "keywords": [
     "front-end",
@@ -75,6 +75,7 @@
     "update-notifier": "^2.5.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.6.0",
+    "webpack-babel-env-deps": "^1.4.3",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   }
