support dynamic imoport

--- a/example/vue@2/.eslintrc
+++ b/example/vue@2/.eslintrc
@@ -1,11 +1,13 @@
 {
   "root": true,
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 8,
     "sourceType": "module",
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
-    }
+    },
+    "allowImportExportEverywhere": true
   },
   "rules": {
     "arrow-parens": 0,
