--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,14 @@
 {
   "root": true,
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 8,
     "sourceType": "module",
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
       "jsx": true
-    }
+    },
+    "allowImportExportEverywhere": true
   },
   "rules": {
     "arrow-parens": 0,
