--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "archiver": "^2.1.1",
     "autoprefixer": "^8.3.0",
     "babel-core": "^6.26.2",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
