--- a/package.json
+++ b/package.json
@@ -27,57 +27,57 @@
     "compress": "node compress-template.js"
   },
   "dependencies": {
-    "archiver": "^2.1.1",
-    "autoprefixer": "^8.3.0",
+    "archiver": "^3.0.0",
+    "autoprefixer": "^9.3.1",
     "babel-core": "^6.26.2",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "colors": "^1.2.1",
-    "commander": "^2.15.1",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^0.28.11",
-    "cssnano": "^3.8.0",
+    "colors": "^1.3.2",
+    "commander": "^2.19.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
+    "cssnano": "^4.1.7",
     "decompress-zip": "^0.3.1",
-    "eslint": "^4.19.1",
+    "eslint": "^5.9.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "^2.1.1",
     "eventsource-polyfill": "^0.9.6",
-    "extend": "^3.0.0",
-    "file-loader": "^1.1.11",
+    "extend": "^3.0.2",
+    "file-loader": "^2.0.0",
     "function-bind": "^1.1.1",
-    "glob": "^7.1.1",
-    "handlebars": "^4.0.5",
+    "glob": "^7.1.3",
+    "handlebars": "^4.0.12",
     "handlebars-loader": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "inquirer": "^5.2.0",
+    "import-fresh": "^2.0.0",
+    "inquirer": "^6.2.0",
     "lazy-cache": "^2.0.2",
     "left-pad": "^1.3.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "npx-handlebars-inject-loader": "^1.0.0",
-    "postcss": "^6.0.21",
+    "postcss": "^7.0.5",
     "postcss-assets": "^5.0.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.1.4",
+    "postcss-loader": "^3.0.0",
     "postcss-pxtorem": "^4.0.0",
-    "postcss-reporter": "^5.0.0",
+    "postcss-reporter": "^6.0.0",
     "precss": "^3.1.2",
     "progress-bar-webpack-plugin": "^1.11.0",
-    "require-uncached": "^1.0.3",
     "rimraf": "^2.6.1",
     "rucksack-css": "^1.0.2",
     "scp2": "^0.5.0",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "update-notifier": "^2.5.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.25.1",
     "webpack-babel-env-deps": "^1.4.3",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   }
 }
