--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "rucksack-css": "^1.0.2",
     "scp2": "^0.5.0",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "terser-webpack-plugin": "^1.1.0",
     "update-notifier": "^2.5.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
