--- a/example/normal(react)/package.json
+++ b/example/normal(react)/package.json
@@ -16,5 +16,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "react-hot-loader": "^4.1.2"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 5%",
+    "safari >= 8",
+    "ie >= 10",
+    "Firefox ESR",
+    "iOS >= 8",
+    "android >= 4"
+  ]
 }
