--- a/example/vue@2/package.json
+++ b/example/vue@2/package.json
@@ -19,5 +19,14 @@
     "vue-loader": "^14.2.2",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.4.2"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 5%",
+    "safari >= 8",
+    "ie >= 10",
+    "Firefox ESR",
+    "iOS >= 8",
+    "android >= 4"
+  ]
 }
