--- a/package.json
+++ b/package.json
@@ -28,56 +28,55 @@
   },
   "dependencies": {
     "archiver": "^3.0.0",
-    "autoprefixer": "^9.3.1",
+    "autoprefixer": "^9.6.0",
     "babel-core": "^6.26.2",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "colors": "^1.3.2",
-    "commander": "^2.19.0",
+    "colors": "^1.3.3",
+    "commander": "^2.20.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
-    "cssnano": "^4.1.7",
-    "decompress-zip": "^0.3.1",
-    "eslint": "^5.9.0",
+    "cssnano": "^4.1.10",
+    "decompress-zip": "^0.3.2",
+    "eslint": "^5.16.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^2.1.2",
     "eventsource-polyfill": "^0.9.6",
     "extend": "^3.0.2",
     "file-loader": "^2.0.0",
     "function-bind": "^1.1.1",
-    "glob": "^7.1.3",
-    "handlebars": "^4.0.12",
-    "handlebars-loader": "^1.7.0",
+    "glob": "^7.1.4",
+    "handlebars": "^4.1.2",
+    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
     "import-fresh": "^2.0.0",
-    "inquirer": "^6.2.0",
+    "inquirer": "^6.3.1",
     "lazy-cache": "^2.0.2",
     "left-pad": "^1.3.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.4.5",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "npx-handlebars-inject-loader": "^1.0.0",
-    "postcss": "^7.0.5",
+    "postcss": "^7.0.17",
     "postcss-assets": "^5.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-pxtorem": "^4.0.0",
-    "postcss-reporter": "^6.0.0",
+    "postcss-reporter": "^6.0.1",
     "precss": "^3.1.2",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.3",
     "rucksack-css": "^1.0.2",
     "scp2": "^0.5.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.1.0",
+    "terser-webpack-plugin": "^1.3.0",
     "update-notifier": "^2.5.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.25.1",
-    "webpack-babel-env-deps": "^1.4.3",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack": "^4.34.0",
+    "webpack-dashboard": "^3.0.7",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-merge": "^4.2.1"
   }
 }
