--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "webpack": "^4.34.0",
     "webpack-dashboard": "^3.0.7",
     "webpack-dev-server": "^3.7.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpackbar": "^3.2.0"
   }
 }
